align image on the center and fixed integration test accordingly

--- a/confluence-jira-plugin/src/main/resources/jirachart/jirachart.css
+++ b/confluence-jira-plugin/src/main/resources/jirachart/jirachart.css
@@ -26,6 +26,12 @@
     width: 100%;
 }
 
+.img-wrapper #jira-chart-macro-img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .content-preview .aui-message {
 	margin-top : -20px;
 	margin-left : -19px;
